# rocket-diesel

./: Cargo.toml  README.md
examples/database/: .env  Cargo.toml  database.sqlite
examples/database/config/: diesel.json
examples/database/migrations/2019-10-07-063830_create_users/: up.sql
examples/database/migrations/2019-10-07-065135_create_oauth/: down.sql  up.sql
examples/database/src/: main.rs  models.rs  schema.rs
src/: configuration.rs  connection.rs  database.rs  error.rs  lib.rs  locked_connection.rs  result.rs  settings.rs
