[package]
name = "database"
version = "0.1.0"
authors = ["CugeDe <cugede.0x07ffff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket-config = "0.0.2"
rocket-diesel = { path = "../../", version = "0.0.1" }

[dependencies.diesel]
version = "1.4"
default-features = false
features = ["mysql", "postgres", "sqlite"]